          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
      body         { background-color:black; }
    </style>
  </head>
  <body>
$ 9.6
  % Version 9.6
  _ 2012-04-xx
    * Show prev/next page buttons on smaller screens
    * More translations (let me know if you find errors)
$ 9.5
  % Version 9.5
  _ 2012-03-28
    * Make "clear page" also clear straight lines
    * Export page background to PDF
    * Reverse Vol up/down navigation
    * Added German localization
$ 9.4
  % Version 9.4
  _ 2012-03-21
    * Fix FC when overriding pen detection
$ 9.3
  % Version 9.3
  _ 2012-03-20
    * Make screen on configurable
    * Make pinch-to-zoom in move gesture configurable
    * Support Galaxy Note stylus
    * Fix for notebook restore
$ 9.2
  % Version 9.2
  _ 2012-03-16
    * close app when pressing back twice
    * fix export to specific directory
    * fix force close in settings
$ 9.1
  % Version 9.1
  _ 2012-03-16
    * Fixed export to other app
    * Force close fixes
$ 9.0
  % Version 9.0
  _ 2012-03-08
    * New internal file format, switching notebooks is much faster now
    * New file chooser dialog
    * New icon!
    * Keep screen on in the main window
    * Straight lines tool
$ 8.6
  % Version 8.6
  _ 2012-02-08
    * Really re-enable pressure sensitive pen on some tablets
$ 8.5
  % Version 8.5
  _ 2012-02-07
    * Fix hide the system bar if USB debugging is disabled
    * Re-enable pressure sensitive pen on some tablets
$ 8.4
  % Version 8.4
  _ 2012-02-06
  ! We are featured on the market, thank you all!
    * Hide the system bar (optional, requires root)
    * Left-handedness fix
    * Hide "fountain pen" if tablet does not have digitizer
    * More bugfixes
$ 8.3
  % Version 8.3
  _ 2012-01-21
    * xhdpi (Galaxy Nexus) layout fixes
    * Palm shield default to false (capacitive pen only)
    * Fix occasional image export bug